--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,11 @@ services:
     name: trl-irl-assessment
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    region: oregon
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
+      - key: PIP_EXTRA_INDEX_URL
+        value: https://pypi.org/simple/
