--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,12 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
-      - key: PIP_EXTRA_INDEX_URL
-        value: https://pypi.org/simple/
+      - key: PORT
+        value: 10000
