--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ Flask-CORS==4.0.0
 reportlab==4.0.4
 Pillow>=10.0.0,<11.0.0
 gunicorn==21.2.0
+google-api-python-client==2.100.0
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.1
+psycopg2-binary==2.9.7
+python-dotenv==1.0.0
