--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9  # Changed from 3.13 to 3.11.9
+        value: 3.11.9
       - key: PORT
         value: 10000
       - key: SECRET_KEY
