--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ google-api-python-client==2.100.0
 google-auth==2.23.0
 google-auth-oauthlib==1.0.0
 google-auth-httplib2==0.1.1
-psycopg2-binary==2.9.7
+psycopg[binary]==3.2.1
 python-dotenv==1.0.0
